--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,21 @@ img{
   animation: rotation 5s infinite linear;
 }
 
+#headerLogo {
+  cursor: pointer;
+  transition: all 0.15s;
+}
+
+#cartLogo {
+  text-align: end;
+  cursor: pointer;
+  transition: all 0.15s;
+}
+
+#headerLogo:hover, #cartLogo:hover {
+  outline: 2px solid #656872c1;
+}
+
 @keyframes rotation {
   from {
     transform: rotate(0deg);
